<resources>
    <string name="app_name">Chat App</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_profile">Profile</string>
    <string name="type_message">type message</string>
    <string name="btn_save">Save</string>
</resources>
