<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    tools:context=".Activities.SignUpActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--
        <ImageView
            android:id="@+id/Logo"
            android:layout_width="128dp"
            android:layout_height="121dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/yo" />
           -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_up"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/RegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:textColorHighlight="@color/colorText"
            android:hint="@string/enter_name"
            android:minHeight="48dp"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/RegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:textColorHighlight="@color/colorText"
            android:hint="@string/enter_email"
            android:minHeight="48dp"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColorHighlight="@color/colorText"
            android:hint="@string/enter_password"
            android:minHeight="48dp"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/RegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:textColorHighlight="@color/colorText"
            android:hint="@string/enter_confirm_password"
            android:minHeight="48dp"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:textColorHint="@color/colorButtonText"
            android:hint="Sign Up" />

        <TextView
            android:id="@+id/toSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="have an account ? Sign In"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

</LinearLayout>